--- a/low_mach_final.tex
+++ b/low_mach_final.tex
@@ -194,8 +194,6 @@
 %-------------------------
 %-------------------------
 \begin{abstract}
-%We show that the current version of the entropy viscosity method, a viscous regularization technique for hyperbolic 
-%conservation laws, is not well-suited to low-Mach flows. 
 We present a new version of the entropy viscosity method, a viscous regularization technique for hyperbolic 
 conservation laws, that is well-suited to low-Mach flows. 
 By means of a low-Mach asymptotic study, new expressions for the entropy viscosity coefficients are derived.
@@ -203,18 +201,10 @@ These definitions are valid for a wide range of Mach numbers, from subsonic flow
 supersonic flows, and no longer depend on an analytical expression for the entropy function.
 In addition, the entropy viscosity method is extended to Euler equations with variable area for nozzle flow problems.
 %
-%and our numerical results confirm that the new expressions are valid for a wide range of Mach numbers, from subsonic flows (with very low Mach  numbers) to supersonic flows. 
-%The new expressions for the entropy viscosity coefficients, obtained by means of an low-Mach asymptotic study,
-%  We show that, in the existing method, the definition of the viscosity coefficients is not adapted to low-Mach flows 
-%and we provide a robust alternate definition valid for any Mach number value by means of an asymptotic study. 
-%The entropy viscosity method is also extended to Euler equations with variable area for nozzle flow problems.
- %In addition, the entropy minimum principle is used to derive the viscous regularization terms for Euler equations with 
-%variable area for nozzle flow problems. 
 The effectiveness of the method is demonstrated using various 1-D and 2-D benchmark tests: flow in a converging-diverging 
 nozzle; Leblanc shock tube; slow moving shock; strong shock for liquid phase; low-Mach flows around a 
 cylinder and over a circular hump; and supersonic flow in a compression corner. 
 Convergence studies are performed for both smooth solutions and solutions with shocks present. 
-%The ideal gas and stiffened gas equations of state are employed.
 \end{abstract}
 %-------------------------
 %-------------------------
@@ -230,102 +220,7 @@ Convergence studies are performed for both smooth solutions and solutions with s
 \section{Introduction} \label{sec:intro}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\tcr{I need to continue working on the Introduction} \tcb{what is it you want to change?}
 
-%\tcr{ not finished yet\\
-%Items to mention:
-%\begin{itemize}
-%\item low Mach solution techniques using compressible equations. need to recover the incompressible limit. 
-%\item entropy viscosity method, not yet assessed for low Mach and transonic flows
-%\item low Mach also challenging when solved using compressible equations: if explicit, time step $\rightarrow 0$. We use MOOSE and implicit time stepping
-%\item some flow problems have both low Mach and supersonic regions
-%\item OTHERS ???
-%\item 
-%\end{itemize}
-%}
-%\tcr{I think we should focus the introduction more}
-%
-%Incompressible flows are a particular case of compressible ones and therefore in principle, a
-%compressible flow solver should be able to compute these flows. Unfortunately, there are experimental
-%evidences showing that on a fixed mesh, the solutions of the compressible flow discretized
-%equations are not an accurate approximation of the solutions of the incompressible model (e.g. see
-%[29]). A first analysis of this problem appeared in [23] and this question has drawn a considerable
-%attention [1–3,7,9,26,28,30] in the recent past. Several works have tried to explain the reasons of
-%this difficulty and to construct numerical schemes valid for all Mach numbers. Some of these
-%works extend to the compressible regime the numerical methods used for the computation of
-%incompressible flows. Examples of these type of methods are for instance [1] or [30]. Another
-%approaches rely on some modifications of high order shock capturing techniques. These approaches
-%are for instance described in [2,7,22] for Roe discretization, in [3] for the HLLE scheme
-%and in [28] for Flux schemes. Their principal ingredient is the use of preconditioning techniques
-%originally developed for steady state computations [4,21,23] that are here selectively applied only
-%to the upwind artificial viscosity.
-%
-%
-%The efficient simulation of low Mach number flows is a subject of ongoing discussion in the
-%CFD community. While the flow is expected to be incompressible, in a lot of applications
-%the Mach number or the compressibility properties vary strongly in time or space. This is
-%for example the case in nozzle  flow, chemically reacting flows or laminar combustion. It is
-%well known that purely compressible flow solvers which were developed for transonic 
-%flow produce wrong results at low Mach numbers. On the other hand, standard incompressible 
-%flow solvers cannot deal with strong temperature or strong density gradients. This sets a
-%demand for codes that can deal with flows at all Mach numbers.
-%
-%It is well known that it is difficult to solve the compressible equations for low Mach numbers.
-%For an explicit scheme this is easily seen by looking at the time steps. For stability the time
-%step must be chosen inversely proportional to the largest eigenvalue of the system which is
-%approximately the speed of sound, c, for slow flows. However, other waves are convected at the
-%fluid speed, u, which is much slower. Hence, these waves don’t change very much over a time
-%step. Thus, thousands of time steps are required to reach a steady state. Should one try a
-%multigrid acceleration one finds that the same disparity in wave speeds slows down the
-%multigrid acceleration. With an implicit method an AD1 factorization is usually used so that
-%one can easily invert the implicit factors. The use of AD1 introduces factorization errors which
-%again slow down the convergence rate when there are wave speeds of very different magnitudes
-%For small Mach numbers it can be shown [28,31] that the incompressible equations approximate
-%the compressible equations. Hence, one needs to justify the use of the compressible
-%equations for low Mach flows. We present several reasons why one would still use the
-%compressible equations even though the Mach number of the flow is small.
-%l There are many sophisticated compressible codes available that could be used for such
-%problems especially in complicated geometries.
-%l For low speed aerodynamic problems at a high angle of attack most of the flow consists of
-%a low Mach number flow. However, there are localized regions containing shocks.
-%l In many problems thermal effects are important and the energy equation is coupled to the
-%other equations.
-%
-%The incompressible limit of a compressible flow is rather subtle due to the fact that the propagation rate of
-%the pressure waves becomes infinite and the equations change their type. Within this limit the pressure splits up
-%into a thermodynamic pressure term and a hydrodynamic pressure term. If the limit solution has constant
-%temperature and density and if the boundary values satisfy the incompressibility constraint, then the
-%thermodynamic pressure becomes the background pressure being constant in space and time. The hydrodynamic
-%pressure appears in the incompressible equations as a sort of a Lagrangian multiplier with no connection
-%to the equation of state. The asymptotic analysis of Klainerman and Majda in [9,10] gives insight into this
-%limit behavior. They gave a mathematically rigorous derivation in the isentropic case. The asymptotic analysis
-%was formally extended by Klein to the non-isentropic case and to multiple space scales in [11] in which he also
-%gave an overview about other asymptotic considerations in this low Mach number regime. A detailed discussion
-%of the incompressible limit is also given in the book of Wesseling [20].
-%Numerical methods for the compressible equations may have difficulties with the zero Mach number limit
-%because in the limit the speed of sound waves becomes infinite compared to the flow speed and thus leads to an
-%elliptic coupling of pressure and velocity. Hence, all explicit numerical schemes become quite inefficient in the
-%low Mach number regime due to their stability restriction (CFL condition). The other difficulty is that the
-%pressure in the compressible equations converges to the thermodynamic pressure, which becomes the constant
-%background pressure in the incompressible limit. This is the way how the equation of state for compressible
-%flow is automatically satisfied and does not appear in the incompressible equations. For the compressible
-%equations Bijl and Wesseling [2] introduced a splitting of the pressure into a thermodynamic and a hydrodynamic
-%pressure term. Then they proposed an implicit numerical method that remains stable without reference
-%to the sound velocity and which approximates the incompressible equations for Mach number zero. The constant
-%thermodynamic pressure satisfies the equation of state and the hydrodynamic pressure serves as a
-%Lagrangian multiplier to get the divergence-free property of the velocity. A formulation in conservative variables
-%was later given in [18,20]. Similar to this approach Klein and Munz [12] and Munz et al. [13] proposed
-%%the multiple pressure variable (MPV) method based on the asymptotic results of Klein [11].
-%
-%\tcr{above are good snippets from some papers.}
-
-%While the flow is expected to be incompressible, in a lot of applications
-%the Mach number or the compressibility properties vary strongly in time or space. This is
-%for example the case in nozzle  flow, chemically reacting flows or laminar combustion. It is
-%well known that purely compressible flow solvers which were developed for transonic 
-%flow produce wrong results at low Mach numbers. On the other hand, standard incompressible 
-%flow solvers cannot deal with strong temperature or strong density gradients. This sets a
-%demand for codes that can deal with flows at all Mach numbers.
 
 Accurately solving compressible fluid equations in the low-Mach limit is an ongoing topic of research. 
 In many engineering applications, compressibility effects require the solution of the compressible fluid equations
@@ -354,25 +249,12 @@ do not yield the correct solution in the low-Mach regime and suitable modificati
 to ensure the convergence to the correct solution while preserving the original shock stabilization 
 properties of these schemes. 
 %
-%Using an asymptotic approach, the effect of the dissipative 
-%terms 
-%%
-%\tcr{not clear for a reader, what dissipative are you talking about? you just said Euler equation and you have not made the link in the above text between stabilization techniques and dissipative terms. I think a reader who only does DG would not understand what you are trying to say}
-%%
-%in the low-Mach regime can be understood and, when needed, a fix is developed in order to ensure the convergence of the 
-%equations to the correct physical solution. This approach was used as a ``fixing'' method for multiple well-known stabilization 
-%methods, for instance, the Roe scheme (\cite{Roe}) and the SUPG technique \cite{LowMach3}, while preserving the original stabilization 
-%properties for shocks. 
 Additionally, the time step size may be severely restricted when solving compressible fluid equations with an explicit time discretization 
 because of the large disparity between the fluid velocity and the speed of sound. 
 To avoid an excessive number of explicit time steps, time preconditioners have been proposed and proved efficient \cite{LowMach2};
 however, because they modify the time derivatives in the governing equations, such acceleration techniques can only be used to obtain
 steady-state solutions for low-Mach flows using explicit schemes.
-%for stability purpose, the time step must be chosen inversely proportional to the largest eigenvalue of the 
-%system which is approximately the speed of sound, $c$, for slow flows. However, other waves are convected at the fluid speed, which may 
-%be significantly smaller than $c$. Hence, these waves do not change very much over a time step. Thus, thousands of time steps are required 
-%to reach a steady state. Acceleration techniques were developed and proved efficient \cite{LowMach2} but require the modification of the 
-%temporal derivatives of the equation and, thus, can only be used for steady-state flows. 
+%
 To avoid modifying the time derivatives, 
 the temporal implicit capabilities of the MOOSE multiphysics framework \cite{MOOSE} are used. With such a choice, low-Mach steady-state solutions 
 can be obtained effectively while preserving the accuracy of the transient solution; however, it requires the use of nonlinear solvers.
@@ -399,21 +281,6 @@ low-Mach flows over a cylinder and a circular bump (with Mach numbers as low as 
 in a compression corner \cite{CompressionCorner}. 
 Convergence studies are performed in 1-D in order to demonstrate the accuracy of the solution technique. 
 
-% keep this as a comment for now
-%\tcr{I wouldn't recall this here. Let me think about that.}\\
-%For purpose of clarity, the multi-D Euler equations with variable area are recalled in \eqt{eq:euler_eq} and the corresponding variables are defined:
-%%
-%\begin{equation}
-%\label{eq:euler_eq}
-%\left\{ 
-%\begin{array}{lll}
-%\partial_t \left( \rho A\right) + \div \left( \rho \vec{u} A\right) = 0\\
-%\partial_t \left( \rho \vec{u} A\right) + \div \left[ \left( \rho \vec{u} \otimes \vec{u} + P \mathbf{I} \right) A \right] = P \grad A\\
-%\partial_t \left( \rho E A\right) + \div \left[ \vec{u} \left( \rho E + P \right) A\right] = 0 \\
-%P = P\left( \rho, e \right)
-%\end{array}
-%\right.
-%\end{equation}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -637,12 +504,10 @@ and $\kappa_e$ can be re-defined as follows:
 \begin{subequations}
 \label{eq:visc_definition}
 \begin{equation}
-%\mu^K_e(\vec{r}_q,t)    = h_K^2 \frac{\max\left( | \resinew^K(\vec{r}_q,t) |\,, \| \vec{u}(\vec{r}_q,t) \| J^K[P](t) \,, \| \vec{u}(\vec{r}_q,t) c^2(\vec{r}_q,t) \| J^K[\rho](t) \right)}{\norm_P^\mu}    \, ,
 \mu^K_e(\vec{r}_q,t)    = h_K^2 \frac{\max\left( | \resinew^K(\vec{r}_q,t) |\,, J^K(t) \right)}{\norm_P^\mu} \, , 
 \end{equation} 
 \text{and} 
 \begin{equation}
-%\kappa^K_e(\vec{r}_q,t) = h_K^2 \frac{\max\left( | \resinew^K(\vec{r}_q,t) |\,, \| \vec{u}(\vec{r}_q,t) \| J^K[P](t) \,, \| \vec{u}(\vec{r}_q,t) c^2(\vec{r}_q,t) \| J^K[\rho](t) 
 \kappa^K_e(\vec{r}_q,t) = h_K^2 \frac{\max\left( | \resinew^K(\vec{r}_q,t) |\,, J^K(t) \right)}{\norm_P^\kappa} \, ,
 \end{equation}
 where the jump term is now based on the jumps in the normal derivatives of the pressure and in the normal derivatives of the density (multiplied by $c^2$): 
@@ -651,7 +516,7 @@ J^K( t) = \max_{f\in\partial K}  \max_{ \vec{r}_q \in f}  \Big( \| \vec{u}(\vec{
 \end{equation}
 \end{subequations}
 %
-The jump operator $J^K$ acts on the same variables appearing in $\resinew$, namely, pressure and density. The residual 
+The jump operator $J^K$ acts on the same variables that appear in $\resinew$, namely, pressure and density. The residual 
 $\resinew$ and the pressure jump will only contribute to the viscosity coefficients in a shock region. On the other hand, the density jump will contribute in both contact and shock regions. 
 The $\mu$ and $\kappa$ coefficients are kinematic viscosities (units of $m^2/s$); the normalization 
 parameters ``$\norm_P$'' are thus in units of pressure, hence the use of the subscript $P$.  It is emphasized that we are not requiring the same normalization for both $\mu_e$ and $\kappa_e$ so the entropy viscosity 
@@ -659,7 +524,6 @@ coefficients can be different. The low-Mach asymptotic study presented next will
 
 %===================================================================================================
 \subsection{Asymptotic Study in the Low-Mach Regime} \label{sec:lowMach}
-%\tcb{What about: Derivation of the all-speed reformulation of the viscosity coefficients}
 %===================================================================================================
 
 The Euler equations with viscous stabilization, \eqt{eq:ent_visc_coeff}, bear some similarities with 
@@ -681,13 +545,7 @@ order $M^2$ and that the velocity satisfies the divergence constraint $\div \vec
 value of Mach number and the minimum entropy principle should still be satisfied so that numerical 
 oscillations, if any, be controlled by the entropy viscosity method independently of the value of the Mach number.
 Our objective is to determine the appropriate scaling for ``$\norm_P^\kappa$'' and ``$\norm_P^\mu$'' in these two limit cases.
-% the Reynolds and P\'eclet numbers, $\Re_\infty$ and $\Pe_\infty$, in these two limit cases.
 
-%%%In this Section, we deal with the isentropic limit; the non-isentropic case is treated later.
-% where Euler equations degenerate to an incompressible system of equations.
-% The scaling of the Prandtl number defined in the original definition of the entropy viscosity method as recalled in \sct{sec:background} will be also demonstrated. 
-%It will be also showed that the Prandlt number defined in the original definition of the entropy viscosity method as recalled in \sct{sec:background}, has to scale as the inverse of the Mach number square in order to have well-scale dissipative terms. \tcr{I need to think a bit more about the previous sentences}
-%
 The first step in the study of the limit cases (i) and (ii) is to re-write \eqt{eq:euler_visc} in 
 a non-dimensional manner. To do so, the following variables are introduced:
 %
@@ -773,9 +631,6 @@ P^* = \left( \gamma-1 \right) \rho^*\left(  E^* -\frac{1}{2} M_\infty^2 (u^*)^2 
 %\tcb{this assumption is only useful in the asymptotic limit. I believe it is possible to carry the same asymptotic limit by assuming a more generic form of the equation of state such as $P = f(\rho)$ for isentropic flow. Do you think it is a good idea to do so?}\\
 
 %We consider two limit cases: isentropic flows \tcr{(the low-Mach asymptotic limit)} and non-isentropic situations (both subsonic and supersonic since we do not wish to specialize the entropy viscosity method to only low-Mach flows). 
-
-%\tcr{? so that shocks are stabilized and the isentropic incompressible limit and its main features are preserved.}
-%so that the main features of the incompressible fluid equations are retrieved in the low-Mach limit, \tcb{and shock can be efficiently stabilized}.
 
 In the low-Mach isentropic limit, shocks cannot form and the compressible Euler equations are known to 
 converge to the incompressible equations when the Mach number tends to zero. When adding dissipative 
@@ -888,16 +743,6 @@ choice, option (a), has the proper scaling: in this case, only the dissipation t
 $\gradd{s,*} \vec{u}^*$ scale as $1/M_\infty^2$ since $\Re_\infty = M_\infty^2$, leaving the 
 regularization of the continuity equation unaffected because $\Pe_\infty = 1$.
 %
-%When using the definition of the first-order viscosity coefficient $\mu_{max}$, it can be shown that the Reynolds and P\'eclet numbers scale as the inverse of the Mach number leading to ill-scaled dissipative terms in the low-Mach limit. This behavior is undesirable when the numerical solution is smooth but make the viscous regularization over-dissipative in the shock region where the second-order viscosity coefficient saturates to the first-order viscosity coefficient. 
-%
-%Thus, it is chosen to use option (a) to solve the non-isentropic form of the Euler equations. Under this assumption, the scaling of the Prandtl number can be derived using \eqt{eq:ref_nb_pr}: $\Pr_\infty = M_\infty^{-2}$.
-%
-%Before performing a low-Mach asymptotic limit, it is proposed to determine the scaling of the Prandtl number. It can be shown that the P\'echlet number is a function of the Reynolds and Prandtl number as follows:$Pe_\infty = Re_\infty Pr_\infty$. Using the condition imposed by (a) and the previous relation, it is easily derived that the Prandtl number scales as the inverse of the Mach number: $Pr_\infty = M_\infty^2$.
-%
-%Since the viscosity coefficient $\mu$ is only present in the momentum and energy equations, the first choice (option (a))may not provide enough dissipation in the continuity equation in the shock regions. 
-%On the other hand, the viscosity coefficient $\kappa$ is present in all of the equations (\eqt{eq:Euler_eq2}) and, thus $\Pe_\infty = M_\infty^2$ is a reasonable choice to provide adequate dissipation for all equations in the shock regions. 
-%Regarding the scaling of the numerical Reynolds, setting of $\Re_\infty=1$ yields numerical dissipation terms that scales identically to the modified Roe scheme proposed by Guillard et al. for low-Mach flows \cite{LowMach1} (see the dissipation term on velocity in Eqs. (48)-(49) of \cite{LowMach1} and in our \eqt{eq:euler_eq2_mom}).
-%
 %
 %===================================================================================================
 \subsection{An All-speed normalization of the entropy residual} \label{sec:new_normaliz}
@@ -962,60 +807,6 @@ It is easy to verify that the construction
 \norm_P^\mu = (1-\sigma(M)) \rho c^2  + \sigma(M)  \rho \|\vec{u} \|^2  
 \end{equation}
 satisfies \eqt{eq:norm_ent2}.
-%%%%%%%%%%%%%%%%%%%%%%%%%% OLD %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%
-%The non-dimensionalized entropy residual, $\resinew^*$, scales 
-%differently for differing flow types (isentropic and non-isentropic) \cite{alazard}. For isentropic 
-%flows, the non-dimensionalized entropy residual is known to scale as the Mach number. For non-isentropic 
-%flows, the non-dimensionalized entropy residual is large and presents a peak at the location of the shock. 
-%Thus, by inspecting the  \emph{local} variation of the non-dimensionalized entropy residual, an 
-%appropriate transition for the scaling of the Reynolds number can be obtained:
-%\begin{equation}  
-%\label{eq:norm_ent}
-%\Re_\infty =  \left\{
-%\begin{array}{ll}
-%M^2  & \text{ if } \left| \resinew^* \right| \geq M \text{ (i.e., non-isentropic flow)} \\
-%1    & \text{ otherwise}
-%\end{array}
-%\right.
-%\, .
-%\end{equation}
-%
-%Now that we have determined a scaling for $\Re_\infty$ and $\Pe_\infty$, the normalization parameters 
-%$\norm_P^\mu$ and $\norm_P^\kappa$ can be finalized. For brevity, only the steps leading to the 
-%derivation of $\norm_P^\kappa$ are provided; the algebra for $\norm_P^\mu$ is similar. Using the 
-%definition of the viscosity coefficients given in \eqt{eq:visc_definition} and the scaling of \eqt{eq:norm_param}, it can be shown that:
-%%
-%\begin{equation}
-%\label{eq:norm_relation}
-%\kappa_\infty = \frac{ \rho_\infty c_\infty^2 u_\infty L }{ \norm_{P,\infty}^{\kappa} } \, ,
-%\end{equation}
-%%
-%where $\norm_{P,\infty}$ is the reference far-field quantity for the normalization parameter $\norm_P$. 
-%Substituting \eqt{eq:norm_relation} into \eqt{eq:ref_numb} and recalling that the numerical P\'eclet number scales as unity, we obtain:
-%%
-%\begin{equation}
-%\label{eq:norm_relation_bis}
-%\norm_{P,\infty}^{\kappa} = \Pe_\infty \rho_\infty c_\infty^2 = \rho_\infty c_\infty^2 \, .
-%\end{equation}
-%%
-%\eqt{eq:norm_relation_bis} provides a proper normalization factor to define the $\kappa$ viscosity coefficient.
-%% the normalization parameter $\norm_P^\kappa$ should scale as $\rho_\infty c_\infty^2$, which leaves us with two options:
-%%either $\norm_P = \rho c^2$ or $\norm_P = P$. The choice was made to use $\norm_P^{\kappa} = \rho c^2$ in the low-Mach limit: it was found to behave well and the pressure can become locally negative and null in some particular case as shown in \sct{sec:results}. 
-%Similarly, the normalization parameter $\norm_P^\mu$ for the $\mu$ viscosity coefficient is derived for the two cases given in \eqt{eq:norm_ent}:
-%%
-%\begin{equation}
-%\label{eq:norm_ent2}
-%\norm_P^\mu = \Re_\infty \rho_\infty c_\infty^2 =  \left\{
-%\begin{array}{ll}
- %\rho \|\vec{u} \|^2       & \text{ if } \left| \resinew^* \right| \geq M \text{ (i.e., non-isentropic flow)} \\
- %\rho c^2 = \norm_P^\kappa & \text{ otherwise}
-%\end{array}
-%\right. \,.
-%\end{equation}
-%%
-%
-%%%%%%%%%%%%%%%%%%%%%% END OLD %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 Finally, we summarize the definition of the viscosity coefficients $\mu$ and $\kappa$ for completeness: 
 %
@@ -1055,11 +846,6 @@ over all faces is determined and used in the definition of the viscosity coeffic
 With the definition of the viscosity coefficients $\mu$ and $\kappa$ proposed in \eqt{eq:final_def_visc_coeff}, 
 the dissipative terms are expected to scale appropriately for very low-Mach regimes as well for transonic
 and supersonic flows. 
-% with shocks will be correctly resolved. 
-%The viscosity coefficients are only function of local variables and thus should accurately resolved complex flow where both incompressible and compressible regimes coexist. 
-%As the flow becomes locally supersonic, the viscosity coefficients $\mu$ and $\kappa$ will be of the 
-%same order of magnitude, which is consistent with the original definition of the entropy viscosity 
-%method \cite{jlg1, jlg2} recalled in \sct{sec:background}.
 %
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%s%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1094,10 +880,8 @@ Here, the variable area is assumed to be a smooth function of space only.
 The application of the entropy viscosity method to the Euler equations with variable area is not 
 fundamentally different to its application to the standard Euler equations. However, we need to 
 derive the associated dissipative terms and verify that the entropy minimum principle is still satisfied.  
-%We summarize the process here: first, we verify that the entropy residual without dissipative terms present is positive; then, the entropy residual is derived with dissipative terms present and the entropy minimum principle is used as a condition to obtain a definition for each of the dissipative terms. 
 The variable-area Euler equations with viscous regularization are given below; details of the derivation are provided in \app{app:diss_terms}.
 %
-% \tcr{\\ missing grad symmetric here \\ Added $A$ in the energy eq. double check for good measure} \tcb{I checked}
 \begin{subequations}
 \label{eq:euler_variable_A_bis}
 \begin{equation}
@@ -1195,12 +979,10 @@ appropriate flux at the boundaries.
 Our implementation of the subsonic boundary conditions is inspired by the method described in \cite{SEM} 
 and was adapted for a time implicit solver. Weakly enforced boundary conditions are used for all of the 
 boundary types, except for the inlet supersonic boundary that are strongly imposed with Dirichlet boundary conditions.
-%\tcr{say a bit more, give 1-2 sentences to describe how to impose subsonic/supersonic inlet/outlet BCs}. \tcb{Is it enough?}
 
 For each numerical solution presented in \sct{sec:results}, the type of boundary conditions used 
 will be specified and taken among the following: supersonic inlet, subsonic inlet (stagnation pressure boundary), 
 subsonic outlet, and supersonic outlet. 
-%and subsonic inlet \tcr{???} (static pressure boundary). \\
 The artificial diffusion coefficient $D(\mathbf  U)$ is set to zero at the boundary of the computational 
 domain so that the boundary term 
 $\int_{\partial \Omega} D(\mathbf  U) \grad \mathbf  U \cdot \vec{n} \mathbf W$ stemming from the 
@@ -1316,10 +1098,6 @@ s = C_v \ln \left( \frac{P+P_\infty}{\rho^{\gamma-1}} \right) ,
 where $C_v$ is the heat capacity at constant volume. \\
 
 Finally, the convergence rates are computed using the following relation 
-%\begin{equation}
-%\label{eq:conv_rates}
-%\text{rate}_h = \ln \left( \frac{\| U_{2h}-U_{\text{exact}} \| - \| U_{h}-U_{\text{exact}} \|}{\| U_{h}-U_{\text{exact}} \| - \| U_{h/2}-U_{\text{exact}} \| } \right) / \ln 2
-%\end{equation}
 \begin{equation}
 \label{eq:conv_rates}
 \text{rate}_h = \ln \left( \frac{\| U_{2h}-U_{\text{exact}} \|}{\| U_{h}-U_{\text{exact}}\| } \right) / \ln 2
@@ -1457,7 +1235,6 @@ cells& density            & rate & pressure          & rate & velocity          
 \end{tabular}
 \end{center}
 \end{table}
-% \tcr{check the rates in this table as well.} \tcb{I did and changed the values \\}
 We note that the convergence rates measured in both the L$_1$ and L$_2$ norm of the error are equal to 2; the entropy viscosity method preserves 
 the high-order accuracy of the discretization used when the numerical solution is smooth. The new definition of the entropy viscosity coefficients behaves 
 appropriately in the low-Mach limit.
@@ -1542,15 +1319,7 @@ $640$& $0.0059715$ $10^{-2}$ & $0.98$  & $1.2754$ $10^{3}$ & $0.98$  & $1.8353$ 
 \end{center}
 \nonumber
 \end{table}
-%\tcr{I was NOT able to reproduce all of the L1 density convergence rates with the 2-pt formula. I have\\
-%         0.800897725302031\\
-%          1.01042916619427\\
-%          1.14172018626244\\
-%         0.985401280471854\\
-%          4.30369311248011\\
-%         0.206566651507186\\
-%          1.79819701118663\\
-%My last 3 rates are wrong. 	It could be because you table does not give enough digits but you give many digits so please investigate this.}
+
 
 \begin{table}[H]
 \begin{center}
@@ -1570,7 +1339,6 @@ $640$ & $5.2191$ $10^{-2}$  & $0.44$ & $9.4217$ $10^{3}$ & $0.44$ & $16.910$ & $
 \end{center}
 \nonumber
 \end{table}
-%\tcr{I was able to reproduce the L2 density convergence rate with the 2-pt formula. Table 6 is Ok}
 %---------------------------------------------------------------------------------------------------
 \subsection{Leblanc shock tube} \label{sec:Leblanc}
 %---------------------------------------------------------------------------------------------------
@@ -1676,9 +1444,6 @@ $6400$&$7.3309974$ $10^{-4}$    & $0.53$ & $4.4545754$ $10^{-4}$ & $0.49$ & $1.4
 %---------------------------------------------------------------------------------------------------
 \subsection{1-D shock tube with a liquid phase} \label{sec:liquid_shock}
 %---------------------------------------------------------------------------------------------------
-%\tcr{until now, you never gave the mu and kappa coefficients, yet they are now different due to their different normalizations.
-%Maybe very little for the previous cases, but we need to mention something because, in this section, you show both, and it is better
-%to say something than to let the reviewers wonder ... } \tcb{what do you think of the following?}
 The purpose of this test is to investigate the ability of the entropy viscosity method to stabilize a strong 
 shock with a small Mach number \cite{abgrall} (this reference is for a two-phase flow model but we are only 
 interested in the initial conditions for the liquid phase): the Mach number in the shock region is of the 
@@ -1697,7 +1462,6 @@ with exact solution in \fig{fig:1d_strong_shock_var}. The viscosity coefficients
 are not equal in the shock because the Mach number is of order $0.1$. The viscosity coefficient $\kappa$ 
 saturates to the first-order viscosity in the shock region around $x = 0.65m$ and is sufficient to 
 stabilize the numerical scheme. 
-%This example illustrates the capabilities of the entropy viscosity method to stabilize a strong shock using liquid fluid properties. 
 %
 \begin{figure}[H]
         \centering
@@ -1887,7 +1651,6 @@ the correct orders in the low-Mach limit. For ease of comparison, reference line
 %---------------------------------------------------------------------------------------------------
 \subsection{Subsonic flow over a 2-D hump} \label{sec:hump}
 %---------------------------------------------------------------------------------------------------
-%\tcr{Is it a circular hump or Gaussian hump in the literature???} \tcb{circular hump}
 
 Subsonic 2-D hump flow is another example of an internal flow configuration. It consists of a channel of height $L=1$ $m$ 
 and length $3L$, with a circular bump of length $L$ and thickness $0.1L$. The bump is located on the bottom 
